<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/holo_green_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cn.studyjams.s1.sj51.quzhanlei.ListenActivity">
<TextView
    style="@style/SectionHeadTextView"
    android:text="@string/writeTextView0"
   />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/seprateLine" />
    <TextView
        style="@style/SectionTextView"
        android:text="@string/writeTextView1"/>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/seprateLine" />
    <TextView
        style="@style/SectionTextView"
        android:text="@string/writeTextView2"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/seprateLine" />
    <TextView
        style="@style/SectionTextView"
        android:text="@string/writeTextView3"/>
    </LinearLayout>
</ScrollView>